--- a/marvelAutosApp/templates/home_page.html
+++ b/marvelAutosApp/templates/home_page.html
@@ -2,8 +2,15 @@
 
 <html>
     <body>
-        <h1>My first MarvelAutos Project</h1>
+        <div>
+            <h1>Welcome to MarvelAutos</h1>
 
-        <p>Author:{{author}}</p>
+            <h2>Please click any of the below login options:</h2>
+
+            <ul>
+                <li><a href="{% url 'users_login' %}">Users Login</a></li>
+                <li><a href="{% url 'service_login' %}">Service Center Login</a></li>
+            </ul>
+        </div>
     </body>
 </html>
